syntax = "proto3";
package gluon.order;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "gluon/x/order/types";

// OrderDirection
enum OrderDirection {
  // Unspecified
  ORDER_DIRECTION_UNSPECIFIED = 0;
  // Buy
  ORDER_DIRECTION_BUY = 1;
  // Sell
  ORDER_DIRECTION_SELL = 2;
}

// BaseOrder
message BaseOrder {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // For avoiding order hash conflict
  uint64 nonce = 2;
  string denom_base = 3;
  string denom_quote = 4;
  OrderDirection direction = 5;
  string amount = 6 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  // Empty means market order
  string limit_price = 7;
  // Required to prevent operator from utilizing old order
  google.protobuf.Timestamp expiry = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}
